Bug 194245 - Exif information lost when exporting
Summary: Exif information lost when exporting
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-WebService-Piwigo (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-27 02:06 UTC by Chris Vanden Berghe
Modified: 2023-02-25 08:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Vanden Berghe 2009-05-27 02:06:18 UTC
Version:           0.10.0 (using KDE 4.2.3)
OS:                Linux
Installed from:    Ubuntu Packages

Hi,

When exporting images to gallery2 exif tags are lost.  This seems to happen with or without resizing (unlike described in http://bugs.kde.org/show_bug.cgi?id=129856).

Regards,
Chris.
Comment 1 Martin Kaufmann 2009-06-02 23:29:10 UTC
I can confirm this bug under Kubuntu jaunty (digikam 0.10.0, libkipi 0.3.0, KDE 4.2.2).
Comment 2 caulier.gilles 2009-06-08 10:15:48 UTC
SVN commit 978789 by cgilles:

Gallery export plugin :

-restore Exif info after image resizing. Exif rotation flag must still here.
-Add RAW handling interface. Now, you can upload RAW image directly to Gallery server. Raw preview image is used (not RAW image data).

Note: Patch is simple and must work as well. PLease test and report if errors are found.

BUG: 194245


 M  +11 -15    CMakeLists.txt  
 M  +213 -115  gallerytalker.cpp  
 M  +19 -19    gallerytalker.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=978789