Gallery export plugin :

-restore Exif info after image resizing. Exif rotation flag must still here.
-Add RAW handling interface. Now, you can upload RAW image directly to Gallery server. Raw preview image is used (not RAW image data).

Note: Patch is simple and must work as well. PLease test and report if errors are found.

BUG: 194245

svn path=/trunk/extragear/graphics/kipi-plugins/; revision=978789